--- a/priv/ua_inspector/short_codes.client_browsers.yml
+++ b/priv/ua_inspector/short_codes.client_browsers.yml
@@ -1,3 +1,5 @@
+- "1B": "115 Browser"
+- "2B": "2345 Browser"
 - "36": "360 Phone Browser"
 - "3B": "360 Browser"
 - "AA": "Avant Browser"
@@ -5,28 +7,43 @@
 - "AF": "ANT Fresco"
 - "AG": "ANTGalio"
 - "AL": "Aloha Browser"
+- "AH": "Aloha Browser Lite"
 - "AM": "Amaya"
 - "AO": "Amigo"
 - "AN": "Android Browser"
+- "AE": "AOL Desktop"
+- "AD": "AOL Shield"
 - "AR": "Arora"
+- "AX": "Arctic Fox"
 - "AV": "Amiga Voyager"
 - "AW": "Amiga Aweb"
+- "A0": "Atom"
 - "AT": "Atomic Web Browser"
 - "AS": "Avast Secure Browser"
+- "VG": "AVG Secure Browser"
+- "BA": "Beaker Browser"
+- "BM": "Beamrise"
 - "BB": "BlackBerry Browser"
 - "BD": "Baidu Browser"
 - "BS": "Baidu Spark"
+- "BI": "Basilisk"
 - "BE": "Beonex"
+- "BH": "BlackHawk"
 - "BJ": "Bunjalloo"
 - "BL": "B-Line"
+- "BU": "Blue Browser"
 - "BR": "Brave"
 - "BK": "BriskBard"
 - "BX": "BrowseX"
 - "CA": "Camino"
+- "CL": "CCleaner"
+- "C0": "Centaury"
 - "CC": "Coc Coc"
+- "C2": "Colibri"
 - "CD": "Comodo Dragon"
 - "C1": "Coast"
 - "CX": "Charon"
+- "CE": "CM Browser"
 - "CF": "Chrome Frame"
 - "HC": "Headless Chrome"
 - "CH": "Chrome"
@@ -35,39 +52,60 @@
 - "CM": "Chrome Mobile"
 - "CN": "CoolNovo"
 - "CO": "CometBird"
+- "CB": "COS Browser"
 - "CP": "ChromePlus"
 - "CR": "Chromium"
 - "CY": "Cyberfox"
 - "CS": "Cheshire"
+- "CT": "Crusta"
 - "CU": "Cunaguaro"
+- "CV": "Chrome Webview"
 - "DB": "dbrowser"
 - "DE": "Deepnet Explorer"
+- "DT": "Delta Browser"
 - "DF": "Dolphin"
 - "DO": "Dorado"
 - "DL": "Dooble"
 - "DI": "Dillo"
+- "DD": "DuckDuckGo Privacy Browser"
+- "EC": "Ecosia"
 - "EI": "Epic"
 - "EL": "Elinks"
 - "EB": "Element Browser"
+- "EE": "Elements Browser"
+- "EZ": "eZ Browser"
+- "EU": "EUI Browser"
 - "EP": "GNOME Web"
 - "ES": "Espial TV Browser"
+- "FA": "Falkon"
+- "FX": "Faux Browser"
+- "F1": "Firefox Mobile iOS"
 - "FB": "Firebird"
 - "FD": "Fluid"
 - "FE": "Fennec"
 - "FF": "Firefox"
 - "FK": "Firefox Focus"
+- "FY": "Firefox Reality"
+- "FR": "Firefox Rocket"
 - "FL": "Flock"
 - "FM": "Firefox Mobile"
 - "FW": "Fireweb"
 - "FN": "Fireweb Navigator"
+- "FU": "FreeU"
 - "GA": "Galeon"
+- "GB": "Glass Browser"
 - "GE": "Google Earth"
+- "GO": "GOG Galaxy"
+- "HA": "Hawk Turbo Browser"
+- "HO": "hola! Browser"
 - "HJ": "HotJava"
-- "IA": "Iceape"
+- "HU": "Huawei Browser"
 - "IB": "IBrowse"
 - "IC": "iCab"
 - "I2": "iCab Mobile"
 - "I1": "Iridium"
+- "I3": "Iron Mobile"
+- "I4": "IceCat"
 - "ID": "IceDragon"
 - "IV": "Isivioo"
 - "IW": "Iceweasel"
@@ -76,50 +114,77 @@
 - "IR": "Iron"
 - "JS": "Jasmine"
 - "JI": "Jig Browser"
+- "JP": "Jig Browser Plus"
+- "JO": "Jio Browser"
+- "KB": "K.Browser"
 - "KI": "Kindle Browser"
 - "KM": "K-meleon"
 - "KO": "Konqueror"
 - "KP": "Kapiko"
+- "KN": "Kinza"
+- "KW": "Kiwi"
 - "KY": "Kylo"
 - "KZ": "Kazehakase"
-- "LB": "Liebao"
+- "LB": "Cheetah Browser"
+- "LF": "LieBaoFast"
 - "LG": "LG Browser"
+- "LH": "Light"
 - "LI": "Links"
+- "LO": "Lovense Browser"
 - "LU": "LuaKit"
+- "LL": "Lulumi"
 - "LS": "Lunascape"
+- "LN": "Lunascape Lite"
 - "LX": "Lynx"
+- "M1": "mCent"
 - "MB": "MicroB"
 - "MC": "NCSA Mosaic"
+- "MZ": "Meizu Browser"
 - "ME": "Mercury"
 - "MF": "Mobile Safari"
 - "MI": "Midori"
+- "MO": "Mobicip"
 - "MU": "MIUI Browser"
 - "MS": "Mobile Silk"
+- "MN": "Minimo"
+- "MT": "Mint Browser"
 - "MX": "Maxthon"
+- "MY": "Mypal"
 - "NB": "Nokia Browser"
 - "NO": "Nokia OSS Browser"
 - "NV": "Nokia Ovi Browser"
+- "NX": "Nox Browser"
 - "NE": "NetSurf"
 - "NF": "NetFront"
 - "NL": "NetFront Life"
 - "NP": "NetPositive"
 - "NS": "Netscape"
 - "NT": "NTENT Browser"
+- "OC": "Oculus Browser"
+- "O1": "Opera Mini iOS"
 - "OB": "Obigo"
 - "OD": "Odyssey Web Browser"
 - "OF": "Off By One"
+- "HH": "OhHai Browser"
 - "OE": "ONE Browser"
+- "OX": "Opera GX"
+- "OG": "Opera Neon"
+- "OH": "Opera Devices"
 - "OI": "Opera Mini"
 - "OM": "Opera Mobile"
 - "OP": "Opera"
 - "ON": "Opera Next"
 - "OO": "Opera Touch"
+- "OS": "Ordissimo"
 - "OR": "Oregano"
+- "O0": "Origin In-Game Overlay"
+- "OY": "Origyn Web Browser"
 - "OV": "Openwave Mobile Browser"
 - "OW": "OmniWeb"
 - "OT": "Otter Browser"
 - "PL": "Palm Blazer"
 - "PM": "Pale Moon"
+- "PY": "Polypane"
 - "PP": "Oppo Browser"
 - "PR": "Palm Pre"
 - "PU": "Puffin"
@@ -129,9 +194,14 @@
 - "PO": "Polaris"
 - "PT": "Polarity"
 - "PS": "Microsoft Edge"
+- "Q1": "QQ Browser Mini"
 - "QQ": "QQ Browser"
 - "QT": "Qutebrowser"
+- "QU": "Quark"
 - "QZ": "QupZilla"
+- "QM": "Qwant Mobile"
+- "QW": "QtWebEngine"
+- "RE": "Realme Browser"
 - "RK": "Rekonq"
 - "RM": "RockMelt"
 - "SB": "Samsung Browser"
@@ -139,24 +209,58 @@
 - "SC": "SEMC-Browser"
 - "SE": "Sogou Explorer"
 - "SF": "Safari"
+- "S5": "Safe Exam Browser"
+- "SW": "SalamWeb"
 - "SH": "Shiira"
+- "S1": "SimpleBrowser"
+- "SY": "Sizzy"
 - "SK": "Skyfire"
 - "SS": "Seraphic Sraf"
 - "SL": "Sleipnir"
-- "SM": "SeaMonkey"
 - "SN": "Snowshoe"
+- "SO": "Sogou Mobile Browser"
+- "S2": "Splash"
+- "SI": "Sputnik Browser"
 - "SR": "Sunrise"
 - "SP": "SuperBird"
+- "SU": "Super Fast Browser"
+- "S3": "surf"
+- "S0": "START Internet Browser"
+- "S4": "Steam In-Game Overlay"
 - "ST": "Streamy"
 - "SX": "Swiftfox"
+- "SZ": "Seznam Browser"
+- "TO": "t-online.de Browser"
+- "TA": "Tao Browser"
+- "TF": "TenFourFox"
+- "TB": "Tenta Browser"
 - "TZ": "Tizen Browser"
+- "TU": "Tungsten"
+- "TG": "ToGate"
 - "TS": "TweakStyle"
+- "TV": "TV Bro"
+- "UB": "UBrowser"
 - "UC": "UC Browser"
+- "UM": "UC Browser Mini"
+- "UT": "UC Browser Turbo"
+- "UZ": "Uzbl"
 - "VI": "Vivaldi"
+- "VV": "vivo Browser"
 - "VB": "Vision Mobile Browser"
+- "VM": "VMware AirWatch"
+- "WI": "Wear Internet Browser"
+- "WP": "Web Explorer"
 - "WE": "WebPositive"
 - "WF": "Waterfox"
+- "WH": "Whale Browser"
 - "WO": "wOSBrowser"
 - "WT": "WeTab Browser"
+- "YJ": "Yahoo! Japan Browser"
 - "YA": "Yandex Browser"
+- "YL": "Yandex Browser Lite"
+- "YN": "Yaani Browser"
 - "XI": "Xiino"
+- "XV": "Xvast"
+- "ZV": "Zvu"
+- "IA": "Iceape"
+- "SM": "SeaMonkey"
