--- a/priv/ua_inspector/short_codes.oss.yml
+++ b/priv/ua_inspector/short_codes.oss.yml
@@ -45,6 +45,7 @@
 - "OS2": "OS/2"
 - "T64": "OSF1"
 - "OBS": "OpenBSD"
+- "ORD": "Ordissimo"
 - "PSP": "PlayStation Portable"
 - "PS3": "PlayStation"
 - "RHT": "Red Hat"
@@ -64,6 +65,7 @@
 - "SY3": "Symbian^3"
 - "TDX": "ThreadX"
 - "TIZ": "Tizen"
+- "TOS": "TmaxOS"
 - "UBT": "Ubuntu"
 - "WTV": "WebTV"
 - "WIN": "Windows"
