--- a/priv/ua_inspector/client.libraries.yml
+++ b/priv/ua_inspector/client.libraries.yml
@@ -1,7 +1,7 @@
 ###############
 # Device Detector - The Universal Device Detection library for parsing User Agents
 #
-# @link http://piwik.org
+# @link https://matomo.org
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
@@ -78,3 +78,36 @@
 - regex: 'libdnf(?:/(\d+[\.\d]+))?'
   name: 'libdnf'
   version: '$1'
+
+- regex: 'HTTPie(?:/(\d+[\.\d]+))?'
+  name: 'HTTPie'
+  version: '$1'
+
+- regex: 'rest-client/(\d+[\.\d]+).*ruby'
+  name: 'REST Client for Ruby'
+  version: '$1'
+
+- regex: 'RestSharp/(\d+[\.\d]+)'
+  name: 'RestSharp'
+  version: '$1'
+  url: 'http://restsharp.org/'
+
+- regex: 'scalaj-http/(\d+[\.\d]+)'
+  name: 'ScalaJ HTTP'
+  version: '$1'
+  url: 'https://github.com/scalaj/scalaj-http'
+
+- regex: 'REST::Client/(\d+)'
+  name: 'Perl REST::Client'
+  version: '$1'
+  url: 'https://metacpan.org/pod/REST::Client'
+
+- regex: 'node-fetch/(\d+[\.\d]+)'
+  name: 'Node Fetch'
+  version: $1
+  url: 'https://github.com/node-fetch/node-fetch'
+
+- regex: 'ReactorNetty/(\d+[\.\d]+)'
+  name: 'ReactorNetty'
+  version: $1
+  url: 'https://github.com/reactor/reactor-netty'
