--- a/priv/ua_inspector/client.mobile_apps.yml
+++ b/priv/ua_inspector/client.mobile_apps.yml
@@ -1,7 +1,7 @@
 ###############
 # Device Detector - The Universal Device Detection library for parsing User Agents
 #
-# @link http://piwik.org
+# @link https://matomo.org
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
@@ -28,11 +28,19 @@
 - regex: '(?:FBAV|com.facebook.katana)(?:[ /]([\d\.]+))?'
   name: 'Facebook'
   version: '$1'
+- regex: '(?:FBAN|FBSV|FBID|FBBV)/'
+  name: 'Facebook'
+  version: ''
 
 # FeedR
 - regex: 'FeedR(?:/([\d\.]+))?'
   name: 'FeedR'
   version: '$1'
+
+# Google Go
+- regex: 'com.google.android.apps.searchlite'
+  name: 'Google Go'
+  version: ''
 
 # Google Play Kiosk
 - regex: 'com.google.android.apps.magazines'
@@ -47,6 +55,11 @@
 # WeChat
 - regex: 'MicroMessenger/([^ ]+)'
   name: 'WeChat'
+  version: '$1'
+
+# DingTalk
+- regex: 'DingTalk/([0-9\.]+)'
+  name: 'DingTalk'
   version: '$1'
 
 # Sina Weibo
@@ -114,6 +127,10 @@
   name: 'Overcast'
   version: '$1'
 -
+  regex: '(?:CastBox|fm.castbox.audiobook.radio.podcast)/?([\d\.]+)?'
+  name: 'CastBox'
+  version: '$1'
+-
   regex: 'Player FM'
   name: 'Player FM'
   version: ''
@@ -160,4 +177,101 @@
 -
   regex: 'jp.co.yahoo.android.yjtop/([\d\.]+)'
   name: 'Yahoo! Japan'
+  version: '$1'
+-
+  regex: 'RSSRadio/([\d]+)?'
+  name: 'RSSRadio'
+  version: '$1'
+-
+  regex: 'SogouSearch Android[\d\.]+ version([\d\.]+)?'
+  name: 'SogouSearch App'
+  version: '$1'
+-
+  regex: 'NewsArticle/([\d\.]+)?'
+  name: 'NewsArticle App'
+  version: '$1'
+-
+  regex: 'tieba/([\d\.]+)?'
+  name: 'tieba'
+  version: '$1'
+-
+  regex: 'com\.douban\.group/([\d\.]+)?'
+  name: 'douban App'
+  version: '$1'
+-
+  regex: 'BingWeb/([\d\.]+)?'
+  name: 'BingWebApp'
+  version: '$1'
+-
+  regex: 'GSA/([\d\.]+)?'
+  name: 'Google Search App'
+  version: '$1'
+-
+  regex: 'Flipboard/([\d\.]+)?'
+  name: 'Flipboard App'
+  version: '$1'
+-
+  regex: 'Instagram[ /]([\d\.]+)?'
+  name: 'Instagram App'
+  version: '$1'
+-
+  regex: 'baiduboxapp/([\d\.]+)?'
+  name: 'Baidu Box App'
+  version: '$1'
+-
+  regex: 'Crosswalk(?!.*(?:Streamy|QwantMobile))/([\d\.]+)?'
+  name: 'CrosswalkApp'
+  version: '$1'
+-
+  regex: 'Twitter for iPhone[/]?([\d\.]+)?'
+  name: 'Twitter'
+  version: '$1'
+-
+  regex: 'Twitter/([\d\.]+)'
+  name: 'Twitter'
+  version: '$1'
+-
+  regex: 'TwitterAndroid[/]?([\d\.]+)?'
+  name: 'Twitter'
+  version: '$1'
+
+-
+  regex: 'TopBuzz/([\d\.]+)'
+  name: 'TopBuzz'
+  version: '$1'
+-
+  regex: 'Snapchat/([\d\.]+)'
+  name: 'Snapchat'
+  version: '$1'
+
+# UnityPlayer
+- regex: 'UnityPlayer/([\d\.]+)'
+  name: 'UnityPlayer'
+  version: '$1'
+
+# (https://play.google.com/store/apps/details?id=cl.uchile.ing.adi.ucursos)
+- regex: 'UCURSOS/v([\d\.]+)'
+  name: 'U-Cursos'
+  version: '$1'
+
+# HeyTabBrowser or HeyTabAccount
+- regex: 'HeyTapBrowser/([\d\.]+)'
+  name: 'HeyTapBrowser'
+  version: '$1'
+
+# Roblox App
+- regex: 'RobloxApp/([\d\.]+)'
+  name: 'Roblox'
+  version: '$1'
+
+- regex: 'Viber/([\d\.]+)'
+  name: 'Viber'
+  version: '$1'
+
+- regex: 'Siri/1'
+  name: 'Siri'
+  version: '1.0'
+
+- regex: 'LinkedIn/([\d\.]+)'
+  name: 'LinkedIn'
   version: '$1'
