--- a/priv/ua_inspector/client.pim.yml
+++ b/priv/ua_inspector/client.pim.yml
@@ -1,7 +1,7 @@
 ###############
 # Device Detector - The Universal Device Detection library for parsing User Agents
 #
-# @link http://piwik.org
+# @link https://matomo.org
 # @license http://www.gnu.org/licenses/lgpl.html LGPL v3 or later
 ###############
 
@@ -43,4 +43,9 @@
 
 - regex: 'DAVdroid(?:/(\d+[\.\d]+))?'
   name: 'DAVdroid'
+  version: '$1'
+
+# SeaMonkey
+- regex: '(?:SeaMonkey|Iceape)(?:/(\d+[\.\d]+))?'
+  name: 'SeaMonkey'
   version: '$1'
