Add terser-webpack-plugin to deps

--- a/assets/package.json
+++ b/assets/package.json
@@ -33,11 +33,9 @@
     "react-router-dom": "^5.2.0",
     "react-transition-group": "^4.4.1",
     "tailwindcss": "^2.0.1-compat",
+    "terser-webpack-plugin": "^4.2.3",
     "url-search-params-polyfill": "^8.0.0",
     "webpack": "4.39.2",
     "webpack-cli": "^3.3.12"
-  },
-  "devDependencies": {
-    "terser-webpack-plugin": "^4.2.3"
   }
 }
