--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,4 +1,4 @@
-name: docker
+name: Build 
 
 on:
   push:
@@ -12,7 +12,16 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
-        
+
+     -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+          ${{ runner.os }}-buildx-
+    
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -32,6 +41,8 @@ jobs:
         with:
           push: true
           tags: plausible/analytics:master
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
