Add workflows on stable

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -2,9 +2,9 @@ name: Elixir CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, stable ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, stable ]
 
 jobs:
   build:
