--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,17 +1,18 @@
-name: Build 
+name: Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, stable ]
 
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v2    
+      - uses: actions/checkout@v2
+
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -24,8 +25,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-          
-      - 
+
+      -
         name: Docker cache
         uses: satackey/action-docker-layer-caching@v0.0.11
       -
@@ -34,7 +35,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plausible/analytics:master
+          tags: plausible/analytics:${GITHUB_REF##*/}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
       -
