--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,9 +15,6 @@ jobs:
       - uses: nelonoel/branch-name@v1.0.1
 
       -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
@@ -28,17 +25,14 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       -
-        name: Docker cache
-        uses: satackey/action-docker-layer-caching@v0.0.11
-      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plausible/analytics:${BRANCH_NAME}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+          tags: plausible/analytics:${{ BRANCH_NAME }}
+          cache-from: type=registry,ref=plausible/analytics:${{ BRANCH_NAME }}
+          cache-to: type=inline
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
