--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: nelonoel/branch-name@v1.0.1
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
 
       -
         name: Set up Docker Buildx
@@ -30,8 +34,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: plausible/analytics:${{ BRANCH_NAME }}
-          cache-from: type=registry,ref=plausible/analytics:${{ BRANCH_NAME }}
+          tags: plausible/analytics:${{ steps.extract_branch.outputs.branch }}
+          cache-from: type=registry,ref=plausible/analytics:${{ steps.extract_branch.outputs.branch }}
           cache-to: type=inline
       -
         name: Image digest
