disable date navigation arrows when date is invalid for site (#483)
* Prevent choosing a date before site was added in datepicker

Fixes #446

* change date navigation arrows to real buttons and disable them when date is invalid for site

* simplify. ditch LinkButton and just use button. make lint a little happier

* put back dark mode for date nav buttons

* enforce line length limit

* fix a11y lint errors

* correct event/e

--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -1,4 +1,7 @@
 {
+  "env": {
+    "browser": true
+  },
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
@@ -9,6 +12,7 @@
     "react/prop-types": [0],
     "max-classes-per-file": [0],
     "react/jsx-one-expression-per-line": [0],
-    "react/self-closing-comp": [0]
+    "react/self-closing-comp": [0],
+    "no-unused-expressions": [1, { "allowShortCircuit": true }]
   }
 }
