--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -52,8 +52,8 @@ jobs:
             deps
             _build
             priv/plts
-          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ runner.os }}-mix-
+          key: ${{ runner.os }}-mix-v1-${{ hashFiles('**/mix.lock') }}
+          restore-keys: ${{ runner.os }}-mix-v1-
       - name: Install dependencies
         run: mix deps.get
       - name: Check Formatting
