--- a/tracker/package.json
+++ b/tracker/package.json
@@ -4,6 +4,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "generatorics": "^1.1.0",
     "handlebars": "^4.7.7",
     "uglify-js": "^3.9.4"
   }
