--- a/assets/package.json
+++ b/assets/package.json
@@ -6,38 +6,38 @@
     "watch": "$(npm bin)/webpack --mode development --watch"
   },
   "dependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/forms": "^0.2.1",
-    "@tailwindcss/typography": "^0.3.1",
-    "abortcontroller-polyfill": "^1.5.0",
-    "alpinejs": "^2.7.3",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-react": "^7.13.13",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.2",
+    "@tailwindcss/typography": "^0.4.1",
+    "abortcontroller-polyfill": "^1.7.3",
+    "alpinejs": "^2.8.2",
+    "autoprefixer": "^10.2.6",
+    "babel-loader": "^8.2.2",
     "chart.js": "^3.3.2",
-    "copy-webpack-plugin": "^6.0.3",
-    "css-loader": "^3.6.0",
+    "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^5.2.6",
+    "css-minimizer-webpack-plugin": "^3.0.0",
     "datamaps": "^0.5.9",
-    "iframe-resizer": "^4.3.1",
-    "mini-css-extract-plugin": "^0.8.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "iframe-resizer": "^4.3.2",
+    "mini-css-extract-plugin": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "postcss": "^7.0.35",
-    "postcss-loader": "^4.0.4",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-flatpickr": "^3.10.5",
+    "react-flatpickr": "3.10.5",
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
-    "react-transition-group": "^4.4.1",
-    "tailwindcss": "^2.0.1-compat",
-    "terser-webpack-plugin": "^4.2.3",
-    "url-search-params-polyfill": "^8.0.0",
-    "webpack": "4.39.2",
-    "webpack-cli": "^3.3.12"
+    "react-transition-group": "^4.4.2",
+    "tailwindcss": "^2.1.2",
+    "terser-webpack-plugin": "^5.1.2",
+    "url-search-params-polyfill": "^8.1.1",
+    "webpack": "5.38.1",
+    "webpack-cli": "^4.7.0"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
