Adds manual, editable, auto-suggested filters, and negated&globbed path-based filters (#1121)
* Adds manual-filters + friends

commit 308192044d726e9a6f7406e333048ab3407aa260
Merge: 62523da a299fab
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri Jun 11 03:40:55 2021 -0500

    Merge branch 'manual-filters' into manual-filters-2

commit a299fab1fbe98ec04ea3dfbfbd175a2af5e73804
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri Jun 11 02:20:26 2021 -0500

    Changes to split and pattern matched function for time_on_page

commit 10f10c933af56a3482747f818bd580a8a1903ae2
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri Jun 11 01:53:18 2021 -0500

    Fixes a couple of minor UX issues

commit f2e5ce8eb33460cb2d1dc9ac0bd0d4ad0a20aa31
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri Jun 11 01:49:10 2021 -0500

    Fixes time on page for globbed and negated page paths

commit bb18af6526068860e4090dc91d02455e515f1238
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Thu Jun 10 05:24:05 2021 -0500

    Close to finalized version of updated version

    Just needs some additional testing + potentially code cleanup

commit d0b7bfe3dacb4c611e6857bed308b5954aa2cc1e
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri May 28 04:21:21 2021 -0500

    Real Dialyzer Fix

commit 296a76af34ff7e16c83e5b5bf62f0547dc30ece9
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Fri May 28 03:44:29 2021 -0500

    Dialyzer fix

commit 91f3b44017afb3838bbb4de8ec9f3ba4d39709bc
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Thu May 27 17:11:24 2021 -0500

    Changelog

commit e041f75745ab57b0d3c00d4a9ff7f8a490b27c17
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Date:   Thu May 27 17:09:52 2021 -0500

    Formatting

commit f689642204b02f6544dc072b95c9c22e180b9e87
Merge: e00929b 2751339
Author: Vignesh Joglekar <rexvigasaurus@gmail.com>
Da

--- a/assets/package.json
+++ b/assets/package.json
@@ -22,6 +22,7 @@
     "css-minimizer-webpack-plugin": "^3.0.0",
     "datamaps": "^0.5.9",
     "iframe-resizer": "^4.3.2",
+    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -32,6 +33,7 @@
     "react-flatpickr": "3.10.5",
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "tailwindcss": "^2.1.2",
     "terser-webpack-plugin": "^5.1.2",
