--- a/assets/package.json
+++ b/assets/package.json
@@ -17,12 +17,14 @@
     "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "chart.js": "^3.3.2",
+    "classnames": "^2.3.1",
     "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "css-minimizer-webpack-plugin": "^3.0.1",
     "datamaps": "^0.5.9",
+    "debounce-promise": "^3.1.2",
+    "downshift": "^6.1.3",
     "iframe-resizer": "^4.3.2",
-    "lodash.debounce": "^4.0.8",
     "mini-css-extract-plugin": "^1.6.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -33,7 +35,6 @@
     "react-flatpickr": "3.10.5",
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
-    "react-select": "^4.3.1",
     "react-transition-group": "^4.4.2",
     "tailwindcss": "^2.1.2",
     "terser-webpack-plugin": "^5.1.2",
