--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,8 @@ repos:
           - eslint-plugin-jsx-a11y@6.4.1
           - eslint-plugin-react@7.21.5
           - eslint-plugin-react-hooks@4.2.0
+
+  - repo: https://gitlab.com/jvenom/elixir-pre-commit-hooks
+    rev: v1.0.0
+    hooks:
+      - id: mix-format
