--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -5,7 +5,7 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "max-len": [2, {"code": 100}],
+    "max-len": [0, {"code": 120}],
     "prettier/prettier": [2],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/destructuring-assignment": [0],
@@ -13,6 +13,9 @@
     "max-classes-per-file": [0],
     "react/jsx-one-expression-per-line": [0],
     "react/self-closing-comp": [0],
-    "no-unused-expressions": [1, { "allowShortCircuit": true }]
+    "no-unused-expressions": [1, { "allowShortCircuit": true }],
+    "no-unused-vars": [2, { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }],
+    "jsx-a11y/click-events-have-key-events": [0],
+    "jsx-a11y/no-static-element-interactions": [0]
   }
 }
