Disable dialyzer in CI

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -62,8 +62,8 @@ jobs:
         run: mix compile --warnings-as-errors --all-warnings
       - name: Run tests
         run: mix test
-      - name: Check Dialyzer
-        run: mix dialyzer
+      #- name: Check Dialyzer
+      #  run: mix dialyzer <-- false negatives
       - name: Check Credo Warnings
         run: mix credo --strict --only warning --ignore Consistency
 env:
